# AWS-dr-pilot-light

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  cdk.json  deploy.sh  pyproject.toml  requirements.txt  test-pipeline.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
config/: environments.py
constructs/: dr_orchestrator.py  ecommerce_compute.py  ecommerce_database.py  global_dns.py  monitoring_dashboard.py  s3_replication.py  secure_vpc.py  security_stack.py
docs/adr/: 001-pilot-light-strategy.md
lambda/: s3_replication_setup.py
lambda_functions/: failover.py  health_check.py
stacks/: dr_region_stack.py  global_resources_stack.py  primary_region_stack.py
tests/: test_constructs.py
